# rs-object-storage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local-target  LICENSE-MIT  README.md  config.json.example  docker-compose.yaml  index.yaml  object-storage-api-0.1.0.tgz  openapi.json  postgres-docker-compose.yaml  sqlx-data.json  storage-api-0.1.0.tgz
.github/workflows/: docker.yml  helm.yml  test.yml
.sqlx/: query-29c150b5e5d61d5ce5522c3c2c8fab202b8d06c0afcbf75b51393db8e9d37205.json  query-2be34290461eee8ca18ccde7d20e6f3eb293143de5481d70bc98945d9ad8b786.json  query-41ca099f5d49eb48fdd85eaf46f012d47a8d595b817523381f2f254ecb1d8837.json  query-4abd181880121faa82c9b2b1ef2a4f2f028680e270436be2b740ad4e404874fc.json  query-5363a00aa2459683432c3f636c0e6ffd4c56c78ea399937f2fabd2f3c727cf96.json  query-771e950c33b69b30cd8dd39891e3001db513a4709469307a119ab3a07d34920d.json  query-adc334b8c348949b47dd7e7148bb1ee79dc4524bba41d8041513b68f35239e3b.json  query-b1b3e18793e04ca03109bdade11575950f460587610bb3a936a176c992dde104.json  query-d89350c0a5d9cf324d878c0147795353f06502c45c955999fe766f27fc9258ce.json  query-ddea615e8eae5f1d4a2616a703bbf71c7ac912728502d73a8c5e826a4c4f60fe.json  query-ff393d74c509f73fc4e1947236520fb554a69bb23824bfe49efc00c52a1016fc.json
helm/object-storage/: Chart.yaml  README.md  values.yaml
helm/object-storage-api/: Chart.yaml  values.yaml
helm/object-storage-api/templates/: _helpers.tpl  config-environment.yaml  config-json.yaml  deployment.yaml  ingress.yaml  objects-pvc.yaml  pod-autoscaler.yaml  pvc.yaml  service.yaml  sqlite-pvc.yaml
helm/object-storage/templates/: _helpers.tpl  config-environment.yaml  config-toml.yaml  deployment.yaml  ingress.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  pod-autoscaler.yaml  service.yaml
helm/storage-api/: Chart.yaml  README.md  values.yaml
helm/storage-api/templates/: _helpers.tpl  config-environment.yaml  config-json.yaml  deployment.yaml  ingress.yaml  pod-autoscaler.yaml  pvc.yaml  service.yaml
migrations/: 20230702234200_core.down.sql  20230702234200_core.up.sql
migrations/postgresql/: 20241117224814_init.down.sql  20241117224814_init.up.sql
migrations/sqlite/: 20241117224814_init.down.sql  20241117224814_init.up.sql
object-storage-client/: Cargo.toml  README.md
object-storage-client/docs/: CreateObjectRequest.md  ErrorMessage.md  Errors.md  Health.md  InternalError.md  MoveObjectRequest.md  ObjectApi.md  ObjectInstance.md  OpenapiApi.md  P2P.md  P2pApi.md  Pagination.md  PaginationObjectInstance.md  PaginationObjectInstanceItemsInner.md  UploadResponse.md  UtilApi.md  Version.md
object-storage-client/src/apis/: client.rs  configuration.rs  mod.rs  object_api.rs  openapi_api.rs  p2p_api.rs  util_api.rs
object-storage-client/src/models/: create_object_request.rs  error_message.rs  errors.rs  health.rs  internal_error.rs  mod.rs  move_object_request.rs  object_instance.rs  p2_p.rs  pagination.rs  pagination_object_instance.rs  pagination_object_instance_items_inner.rs  upload_response.rs  version.rs
src/: app.rs  lib.rs  main.rs
src/controller/: access.rs  files.rs  mod.rs  uploads.rs  util.rs
src/core/: atomic_value.rs  config.rs  database.rs  db.rs  encryption.rs  error.rs  jwt.rs  mod.rs  openapi.rs
src/middleware/: auth.rs  authorization.rs  json.rs  mod.rs  validated_json.rs
src/model/: access.rs  error.rs  file.rs  files.rs  mod.rs  object.rs  p2p.rs  uploads.rs  util.rs
src/repository/: file.rs  object.rs
src/router/: file.rs  mod.rs  object.rs  openapi.rs  p2p.rs  util.rs
src/service/: access.rs  auth.rs  config.rs  file.rs  files.rs  mod.rs  object.rs  peer.rs
tests/: util_test.rs
