[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "object_storage"
description = "Aicacia Object Storage API provides blob services for applications."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "object-storage"
repository = "https://github.com/aicacia/rs-object-storage"
rust-version = "1.82"
version = "0.1.0"

[lib]
name = "object_storage"
path = "src/lib.rs"

[[bin]]
name = "object_storage"
path = "src/main.rs"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
  "multipart",
  "macros",
] }
utoipa = { version = "5.3", default-features = false, features = [
  "axum_extras",
  "chrono",
  "uuid",
  "macros",
] }
# TODO: use when supports 8.0
# utoipa-axum = { version = "0.2", default-features = false }
clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "help",
] }
config = "0.15"
http = "1.2"
tokio = { version = "1.42", default-features = false, features = [
  "rt",
  "fs",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
futures-util = { version = "*", default-features = false }
lazy_static = "1.5"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
validator = { version = "0.19", features = ["derive"] }
log = "0.4"
build-time = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "chrono",
  "time",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "all-databases",
] }
uuid = { version = "1.11", features = ["serde", "v4"] }
atomicoption = "0.1"
# peer server deps
webrtc-http = { version = "0.1", features = ["axum"] }
webrtc-p2p = "0.1"
webrtc = "0.12"
async-tungstenite = { version = "0.28", default-features = false, features = [
  "tokio-runtime",
  "tokio-rustls-native-certs",
] }
urlencoding = "2.1"
dashmap = "6.1"

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
