[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "object_storage"
description = "Aicacia Object Storage API provides blob services for applications."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "object-storage"
repository = "https://github.com/aicacia/rs-object-storage"
rust-version = "1.75"
version = "0.1.0"

[lib]
name = "object_storage"
path = "src/lib.rs"

[[bin]]
name = "object_storage"
path = "src/main.rs"

[dependencies]
dotenv = { version = "0.15", default-features = false }
config = { version = "0.15", default-features = false, features = ["json"] }

clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "help",
] }

log = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "fmt",
  "std",
  "tracing-log",
  "env-filter",
] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
  "multipart",
  "macros",
] }
utoipa = { version = "5.3", default-features = false, features = [
  "axum_extras",
  "chrono",
  "uuid",
  "macros",
] }
utoipa-axum = { version = "0.2", default-features = false }

http = { version = "1.2", default-features = false }
tower-http = { version = "0.6", default-features = false, features = [
  "cors",
  "trace",
  "compression-gzip",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

tokio = { version = "1.43", default-features = false, features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
futures-util = { version = "0.3", default-features = false }

sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "chrono",
  "time",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "all-databases",
] }

validator = { version = "0.19", default-features = false, features = [
  "derive",
] }
lazy_static = { version = "1.5", default-features = false }
build-time = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
atomicoption = "0.1"
dashmap = { version = "6.1", default-features = false }

auth-client = { git = "https://github.com/aicacia/rs-auth.git", rev = "7944d85" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
